--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,9 +1,12 @@
----
 name: Lint
 
 on: # yamllint disable-line rule:truthy
+  push:
+    branches:
+      - feature/**
   pull_request:
     branches: [main, dev]
+
 permissions: {}
 
 jobs:
@@ -26,3 +29,5 @@ jobs:
         uses: super-linter/super-linter/slim@v8.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Scan changed files on feature branches, all files on PRs
+          VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'pull_request' && 'true' || 'false' }}
