--- a/spring-backend/pom.xml
+++ b/spring-backend/pom.xml
@@ -137,7 +137,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.5.8.201207111220</version>
+                <version>0.8.13</version> <!-- update to latest -->
                 <executions>
                     <execution>
                         <goals>
