--- a/spring-backend/pom.xml
+++ b/spring-backend/pom.xml
@@ -96,8 +96,8 @@
         <!-- Embedded MongoDB for Testing -->
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>4.9.2</version>
+            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
+            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
 
