--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -21,26 +21,28 @@ jobs:
     uses: ./.github/workflows/build-and-test.yml
     with:
       folder: ${{ matrix.folder }}
+    secrets: inherit
 
   codeql:
     needs: build_and_test
-    if: ${{ needs.detect-changed.outputs.hasChanges == 'true' }}
-    strategy:
-      matrix:
-        folder: ${{ fromJson(needs.detect-changed.outputs.matrix) }}
-      fail-fast: false
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
       - uses: actions/checkout@v4
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: java-kotlin, javascript, python
+          languages: java-kotlin, javascript-typescript, python
           build-mode: none
 
       - name: Run CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{matrix.language}}"
 
   no_changes_notice:
     needs: detect-changed
@@ -48,4 +50,47 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print no changes message to step summary
-        run: echo "No relevant folders changed; skipping build and CodeQL." >> $GITHUB_STEP_SUMMARY
+        run: echo "## ℹ️ No Changes Detected" >> $GITHUB_STEP_SUMMARY && echo "No relevant folders changed; skipping build and CodeQL analysis." >> $GITHUB_STEP_SUMMARY
+
+  # Summary job that always runs
+  ci_summary:
+    if: always()
+    needs: [detect-changed, build_and_test, codeql, no_changes_notice]
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📋 CI Summary
+        run: |
+          echo "## 🚀 Pull Request CI Summary" >> $GITHUB_STEP_SUMMARY
+          echo "| Job | Status | Details |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----|--------|---------|" >> $GITHUB_STEP_SUMMARY
+
+          # Change Detection
+          status="${{ needs.detect-changed.result }}"
+          emoji="✅"; [[ "$status" != "success" ]] && emoji="❌"
+          echo "| Change Detection | $emoji $status | Detected changes: ${{ needs.detect-changed.outputs.hasChanges }} |" >> $GITHUB_STEP_SUMMARY
+
+          # Build and Test
+          if [[ "${{ needs.build_and_test.result }}" != "skipped" ]]; then
+            status="${{ needs.build_and_test.result }}"
+            emoji="✅"; [[ "$status" != "success" ]] && emoji="❌"
+            echo "| Build & Test | $emoji $status | Matrix build completed |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| Build & Test | ⏭️ skipped | No changes detected |" >> $GITHUB_STEP_SUMMARY
+          fi
+
+          # CodeQL Analysis
+          if [[ "${{ needs.codeql.result }}" != "skipped" ]]; then
+            status="${{ needs.codeql.result }}"
+            emoji="✅"; [[ "$status" != "success" ]] && emoji="❌"
+            echo "| CodeQL Analysis | $emoji $status | Security analysis completed |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| CodeQL Analysis | ⏭️ skipped | No changes detected |" >> $GITHUB_STEP_SUMMARY
+          fi
+
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [[ "${{ needs.detect-changed.outputs.hasChanges }}" == "true" ]]; then
+            echo "### 📊 Changed Components" >> $GITHUB_STEP_SUMMARY
+            echo "Components built and tested: ${{ needs.detect-changed.outputs.matrix }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "### ℹ️ No changes detected in monitored folders" >> $GITHUB_STEP_SUMMARY
+          fi
