--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -56,7 +56,7 @@ jobs:
           npm run build
 
       - name: 📊 Upload Coverage Reports
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: GDIPSA60-Team-5/simbus
@@ -111,6 +111,15 @@ jobs:
           flags: backend
           name: spring-backend-coverage
 
+      - name: 📊 Upload JaCoCo Coverage Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: jacoco-coverage-report
+          path: spring-backend/target/site/jacoco/
+          retention-days: 30
+          
+
   android-kotlin:
     if: needs.validate.outputs.folder == 'android-kotlin-later'
     needs: validate
@@ -150,6 +159,7 @@ jobs:
           ./gradlew assembleRelease
 
       - name: 📊 Publish Test Results
+        uses: dorny/test-reporter@v2
         uses: dorny/test-reporter@v2.1.1
         if: always()
         with:
@@ -158,20 +168,12 @@ jobs:
           reporter: java-junit
 
       - name: 📈 Upload Coverage
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: GDIPSA60-Team-5/simbus
           directory: android-kotlin/app/build/reports/jacoco/testDebugUnitTestCoverage
           flags: android
-
-      - name: 📱 Upload APK Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apks
-          path: |
-            android-kotlin/app/build/outputs/apk/debug/*.apk
-            android-kotlin/app/build/outputs/apk/release/*.apk
 
   llm-backend:
     if: needs.validate.outputs.folder == 'llm-backend'
@@ -251,7 +253,6 @@ jobs:
           fi
 
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📊 Reports Available" >> $GITHUB_STEP_SUMMARY
-          echo "- 📈 **Test Results**: Check the Actions summary for detailed test reports" >> $GITHUB_STEP_SUMMARY
-          echo "- 📊 **Code Coverage**: Available on Codecov dashboard" >> $GITHUB_STEP_SUMMARY
-          echo "- 🔒 **Security Reports**: Uploaded as artifacts (for Python backend)" >> $GITHUB_STEP_SUMMARY
+          echo "### 📊 Coverage Reports Available" >> $GITHUB_STEP_SUMMARY
+          echo "- 📈 **JaCoCo HTML Report**: Download from [Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts)" >> $GITHUB_STEP_SUMMARY
+          echo "- 📊 **Codecov Dashboard**: [View Online Coverage](https://codecov.io/gh/GDIPSA60-Team-5/simbus)" >> $GITHUB_STEP_SUMMARY
