--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -23,6 +23,11 @@ on:
       DOCKER_PASSWORD:
         required: true
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 jobs:
   build_and_push_frontend:
     runs-on: ubuntu-latest
