--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -23,10 +23,14 @@ on:
         required: true
       DOCKER_PASSWORD:
         required: true
+      GITHUB_TOKEN:
+        required: true
 
-# Only request permissions if security tab upload is enabled
+# Updated permissions to allow writing to security events
 permissions:
   contents: read
+  security-events: write
+  actions: read
 
 jobs:
   build_and_push_frontend:
@@ -36,6 +40,8 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -62,6 +68,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-frontend-results.sarif"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Trivy vulnerability scanner (Table) - Frontend
         if: ${{ inputs.security_scan_enabled }}
@@ -85,7 +92,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: trivy-frontend-security-report
-          path: trivy-frontend-report.json
+          path: trivy-frontend-results.json
 
       - name: Log in to DockerHub
         if: success() || !inputs.security_scan_enabled
@@ -111,6 +118,8 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -137,6 +146,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-backend-results.sarif"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Trivy vulnerability scanner (Table) - Backend
         if: ${{ inputs.security_scan_enabled }}
